tests/baselines/reference/trailingCommaInHeterogenousArrayLiteral1.errors.txt
tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts(5,19): error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'number[]'.
  Types of property 'push' are incompatible.
    Type '(...items: (1 | 2 | "hi" | 5)[]) => number' is not assignable to type '(...items: number[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'number' is not assignable to type '1 | 2 | "hi" | 5'.
tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts(6,19): error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'number[]'.


==== tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts (2 errors) ====
    class arrTest {
        test(arg1: number[]) {    }
        callTest() {
            // these two should give the same error
            this.test([1, 2, "hi", 5, ]);
                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Types of property 'push' are incompatible.
!!! error TS2345:     Type '(...items: (1 | 2 | "hi" | 5)[]) => number' is not assignable to type '(...items: number[]) => number'.
!!! error TS2345:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:         Type 'number' is not assignable to type '1 | 2 | "hi" | 5'.
            this.test([1, 2, "hi", 5]); 
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[1, 2, "hi", 5]' is not assignable to parameter of type 'number[]'.
        }
    }
    